syntax = "proto3";

package stats.messages;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "ru.practicum.ewm.stats.proto";

message RecommendedEventProto {
  uint64 event_id = 1;
  double score = 2;
}

message InteractionsCountRequestProto {
  repeated uint64 event_id = 1;
}

message SimilarEventsRequestProto {
  uint64 event_id = 1;
  uint64 user_id = 2;
  uint32 max_result = 3;
}

message UserPredictionsRequestProto {
  uint64 user_id = 1;
  uint32 max_result = 2;
}

message UserActionProto {
  uint64 user_id = 1;
  uint64 event_id = 2;
  ActionTypeProto action_type = 3;
  google.protobuf.Timestamp timestamp = 4;
}

enum ActionTypeProto {
  ACTION_VIEW = 0;
  ACTION_REGISTER = 1;
  ACTION_LIKE = 2;
}