syntax = "proto3";

package stats.services.analyzer;

import "stats/messages/user_event.proto";

option java_package = "ru.yandex.ewm.stats.services.collector";

service RecommendationsController {
  rpc GetRecommendationsForUser (stats.messages.UserPredictionsRequestProto)
    returns (stream stats.messages.RecommendedEventProto);

  rpc GetSimilarEvents (stats.messages.SimilarEventsRequestProto)
    returns (stream stats.messages.RecommendedEventProto);

  rpc GetInteractionsCount (stats.messages.InteractionsCountRequestProto)
    returns (stream stats.messages.RecommendedEventProto);
}